--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">Firebase Database</string>
     <string name="action_settings">Settings</string>
     <string name="menu_login">Log in</string>
-    <string name="menu_logout">Log out</string>
+    <string name="menu_logout">Log out</string>d
+    <string name="menu_stockview">Stock Viwe</string>d
     <string name="login_label">Log In</string>
     <string name="email_label">Email</string>
     <string name="password_label">Password</string>
